# LibraryBorrowingApp

./: CMakeLists.txt  README.md
build-mingw/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mingw/LibraryBorrowingApp_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-mingw/LibraryBorrowingApp_autogen/6YEA5652QU/: moc_adminmainwindow.cpp  moc_adminmainwindow.cpp.d  moc_bookeditordialog.cpp  moc_bookeditordialog.cpp.d  moc_bookmanagewindow.cpp  moc_bookmanagewindow.cpp.d  moc_bookquerywindow.cpp  moc_bookquerywindow.cpp.d  moc_borrowrecordwindow.cpp  moc_borrowrecordwindow.cpp.d  moc_dbmanager.cpp  moc_dbmanager.cpp.d  moc_loginwindow.cpp  moc_loginwindow.cpp.d  moc_readermainwindow.cpp  moc_readermainwindow.cpp.d  moc_registerdialog.cpp  moc_registerdialog.cpp.d
build-mingw/LibraryBorrowingApp_autogen/include/: ui_bookmanagewindow.h  ui_registerdialog.h
docs/: DesignOverview.md
include/: adminmainwindow.h  bookeditordialog.h  bookmanagewindow.h  bookquerywindow.h  borrowrecordwindow.h  dbmanager.h  loginwindow.h  models.h  readermainwindow.h  registerdialog.h
sql/: schema.sql  test_data.sql
src/: adminmainwindow.cpp  bookeditordialog.cpp  bookmanagewindow.cpp  bookquerywindow.cpp  borrowrecordwindow.cpp  dbmanager.cpp  loginwindow.cpp  main.cpp  readermainwindow.cpp  registerdialog.cpp
ui/: adminmainwindow.ui  bookeditordialog.ui  bookmanagewindow.ui  bookquerywindow.ui  borrowrecordwindow.ui  loginwindow.ui  readermainwindow.ui  registerdialog.ui
